fix scrolling issue on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,14 @@
   0% { background-position: 0 0; }
   100% { background-position: 0 -20px; }
 }
+
+html, body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
 body {
   font-family: 'Figtree', serif;
   background-color: #191919;
